Add meta-theme index file and translate it

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AC_INIT([gnome-themes-standard], [2.91.0],
 AM_INIT_AUTOMAKE([1.9 tar-ustar foreign dist-bzip2 no-dist-gzip])
 
 PKG_PROG_PKG_CONFIG([0.19])
+IT_PROG_INTLTOOL([0.35.0])
 
 # Workaround to make aclocal get the right flags
 AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")
@@ -17,6 +18,7 @@ themes/Makefile
 themes/Adwaita/Makefile
 themes/Adwaita/gtk-3.0/Makefile
 themes/Adwaita/metacity-1/Makefile
+po/Makefile.in
 ])
 
 AC_OUTPUT
