--- a/themes/Adwaita/Makefile.am
+++ b/themes/Adwaita/Makefile.am
@@ -1,4 +1,16 @@
 SUBDIRS = gtk-3.0 metacity-1
 
+THEME_NAME=Adwaita
+THEME_IN_FILES=index.theme.in
+
+%.theme:   %.theme.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*.po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
+
+themedir = $(datadir)/themes/$(THEME_NAME)
+
+theme_DATA = index.theme
+
+DISTCLEANFILES = index.theme
+EXTRA_DIST = index.theme.in index.theme
+
 -include $(top_srcdir)/git.mk
 
