--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,11 @@ PKG_PROG_PKG_CONFIG([0.19])
 AC_PROG_SED
 IT_PROG_INTLTOOL([0.35.0])
 
+GETTEXT_PACKAGE="${PACKAGE}"
+AC_SUBST(GETTEXT_PACKAGE)
+
+AM_GLIB_GNU_GETTEXT
+
 # Workaround to make aclocal get the right flags
 AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")
 
