--- a/themes/Adwaita/Makefile.am
+++ b/themes/Adwaita/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = backgrounds gtk-3.0 metacity-1
+SUBDIRS = backgrounds gtk-3.0 metacity-1 gtk-2.0
 
 THEME_NAME=Adwaita
 THEME_IN_FILES=index.theme.in
