Add settings.ini file defining the default color scheme for Adwaita

--- a/themes/Adwaita/gtk-3.0/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/Makefile.am
@@ -1,8 +1,8 @@
 themedir = $(datadir)/themes/Adwaita/gtk-3.0
-theme_DATA = gtk.css
+theme_DATA = 		\
+	gtk.css 	\
+	settings.ini
 
 EXTRA_DIST = $(theme_DATA)
 
-
 -include $(top_srcdir)/git.mk
-
