Add low contrast theme.

--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,8 @@ themes/Adwaita/cursors/Makefile
 themes/Adwaita/gtk-2.0/Makefile
 themes/Adwaita/gtk-3.0/Makefile
 themes/Adwaita/metacity-1/Makefile
+themes/AdwaitaLowContrast/Makefile
+themes/AdwaitaLowContrast/gtk-3.0/Makefile
 src/Makefile
 po/Makefile.in
 ])
