--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,3 +2,4 @@
 # Please keep this file sorted alphabetically.
 themes/Adwaita/backgrounds/adwaita.xml.in.in
 themes/Adwaita/index.theme.in
+themes/AdwaitaLowContrast/index.theme.in
