--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,8 @@ themes/Adwaita/gtk-3.0/Makefile
 themes/Adwaita/metacity-1/Makefile
 themes/AdwaitaLowContrast/Makefile
 themes/AdwaitaLowContrast/gtk-3.0/Makefile
+themes/HighContrast/Makefile
+themes/HighContrast/gtk-3.0/Makefile
 src/Makefile
 po/Makefile.in
 ])
