--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,3 +3,4 @@
 themes/Adwaita/backgrounds/adwaita.xml.in.in
 themes/Adwaita/index.theme.in
 themes/AdwaitaLowContrast/index.theme.in
+themes/HighContrast/index.theme.in
