--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,3 +4,4 @@ themes/Adwaita/backgrounds/adwaita.xml.in.in
 themes/Adwaita/index.theme.in
 themes/AdwaitaLowContrast/index.theme.in
 themes/HighContrast/index.theme.in
+themes/HighContrastInverse/index.theme.in
