--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = Adwaita AdwaitaLowContrast HighContrast HighContrastInverse
+SUBDIRS = Adwaita LowContrast HighContrast HighContrastInverse
 
 -include $(top_srcdir)/git.mk
 
