adwaita: render regular radios and checkboxes like in mockups
This is implemented by importing the SVG elements in the theme as assets
and rendering them instead of drawing them manually.
Icon names are hardcoded, and the past code path is kept as a fallback
in case the icons are not found.

--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,7 @@ themes/Adwaita/backgrounds/Makefile
 themes/Adwaita/cursors/Makefile
 themes/Adwaita/gtk-2.0/Makefile
 themes/Adwaita/gtk-3.0/Makefile
+themes/Adwaita/gtk-3.0/assets/Makefile
 themes/Adwaita/metacity-1/Makefile
 themes/AdwaitaLowContrast/Makefile
 themes/AdwaitaLowContrast/gtk-3.0/Makefile
