--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,11 @@
-
-INCLUDES = $(GTK_CFLAGS)
-
 enginedir = $(libdir)/gtk-3.0/$(GTK_VERSION)/theming-engines
 engine_LTLIBRARIES = libadwaita.la
+
+assetsdir = $(datadir)/themes/Adwaita/gtk-3.0/assets
+
+INCLUDES = \
+	-DASSETS_DIR=\""$(assetsdir)"\" \
+	$(GTK_CFLAGS)
 
 libadwaita_la_SOURCES =			\
 	adwaita_engine.c
