adwaita: split some common code into a separate source file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,8 @@ INCLUDES = \
 	$(GTK_CFLAGS)
 
 libadwaita_la_SOURCES =			\
+	adwaita_utils.h			\
+	adwaita_utils.c			\
 	adwaita_engine.c
 
 libadwaita_la_LDFLAGS = -module -avoid-version -no-undefined -export-symbols $(top_srcdir)/src/engine.symbols
