buttons: use SVG assets to render button borders

--- a/themes/Adwaita/gtk-3.0/assets/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/assets/Makefile.am
@@ -1,5 +1,11 @@
 assetsdir = $(datadir)/themes/Adwaita/gtk-3.0/assets
 assets_DATA = 		\
+	button-active-border.svg \
+	button-active-border-dark.svg \
+	button-border.svg \
+	button-border-dark.svg \
+	button-default-border.svg \
+	button-default-border-dark.svg \
 	checkbox-checked.svg \
 	checkbox-checked-dark.svg \
 	checkbox-checked-insensitive.svg \
