buttons: add a primary-toolbar raised variant of the button border

--- a/themes/Adwaita/gtk-3.0/assets/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/assets/Makefile.am
@@ -24,6 +24,8 @@ assets_DATA = 		\
 	entry-border-normal-dark.svg \
 	primary-toolbar-button-active-border.svg \
 	primary-toolbar-button-active-border-dark.svg \
+	primary-toolbar-raised-button-border.svg \
+	primary-toolbar-raised-button-border-dark.svg \
 	progressbar-border.svg \
 	radio-selected.svg \
 	radio-selected-dark.svg \
