progressbar: fix progressbars for dark theme

--- a/themes/Adwaita/gtk-3.0/assets/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/assets/Makefile.am
@@ -27,6 +27,7 @@ assets_DATA = 		\
 	primary-toolbar-raised-button-border.svg \
 	primary-toolbar-raised-button-border-dark.svg \
 	progressbar-border.svg \
+	progressbar-border-dark.svg \
 	radio-selected.svg \
 	radio-selected-dark.svg \
 	radio-selected-insensitive.svg \
