all: move applications overrides into a separate stylesheet
And import the Nautilus styles there as well.

--- a/themes/Adwaita/gtk-3.0/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/Makefile.am
@@ -2,6 +2,7 @@ SUBDIRS = assets
 
 themedir = $(datadir)/themes/Adwaita/gtk-3.0
 theme_DATA = 		\
+	gnome-applications.css \
 	gtk.css 	\
 	gtk-dark.css	\
 	gtk-widgets.css \
