Theme insensitive+active state for radio and check menuitems
https://bugzilla.gnome.org/show_bug.cgi?id=659263

--- a/themes/Adwaita/gtk-3.0/assets/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/assets/Makefile.am
@@ -19,6 +19,7 @@ assets_DATA = 		\
 	checkbox-mixed-insensitive.svg \
 	checkbox-mixed-insensitive-dark.svg \
 	checkbox-menuitem-checked.svg \
+	checkbox-menuitem-checked-insensitive.svg \
 	checkbox-menuitem-checked-selected.svg \
 	combobox-entry-border-active.svg \
 	entry-border-focused.svg \
@@ -46,6 +47,7 @@ assets_DATA = 		\
 	radio-mixed-insensitive.svg \
 	radio-mixed-insensitive-dark.svg \
 	radio-menuitem-checked.svg \
+	radio-menuitem-checked-insensitive.svg \
 	radio-menuitem-checked-selected.svg \
 	scale-slider-horizontal.svg \
 	scale-slider-horizontal-dark.svg \
