--- a/themes/Adwaita/gtk-3.0/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = assets
+SUBDIRS = assets borders
 
 themedir = $(datadir)/themes/Adwaita/gtk-3.0
 theme_DATA = 		\
@@ -6,6 +6,8 @@ theme_DATA = 		\
 	gtk.css 	\
 	gtk-dark.css	\
 	gtk-widgets.css \
+	gtk-widgets-backgrounds.css \
+	gtk-widgets-borders.css \
 	gtk-widgets-dark-overrides.css \
 	gtk-widgets-assets.css \
 	gtk-widgets-assets-dark.css \
