Widget theme: first stab at column headers.

--- a/themes/Adwaita/gtk-3.0/borders/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/borders/Makefile.am
@@ -1,12 +1,22 @@
 bordersdir = $(datadir)/themes/Adwaita/gtk-3.0/borders
 borders_DATA = 		\
+	column-header-border.svg \
+	column-header-border-last.svg \
 	button-border-focused.svg \
+	button-border-focused-dark.svg \
 	button-border.svg \
+	button-border-dark.svg \
 	generic-border-focused.svg \
+	generic-border-focused-dark.svg \
 	generic-border.svg \
+	generic-border-dark.svg \
 	primary-toolbar-button-border-focused.svg \
+	primary-toolbar-button-border-focused-dark.svg \
 	primary-toolbar-button-border.svg \
+	primary-toolbar-button-border-dark.svg \
 	primary-toolbar-generic-border-focused.svg \
-	primary-toolbar-generic-border.svg
+	primary-toolbar-generic-border-focused-dark.svg \
+	primary-toolbar-generic-border.svg \
+	primary-toolbar-generic-border-dark.svg
 
 EXTRA_DIST = $(borders_DATA)
