Widget theme: Added two missing svgs to the dark theme.

--- a/themes/Adwaita/gtk-3.0/borders/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/borders/Makefile.am
@@ -1,7 +1,9 @@
 bordersdir = $(datadir)/themes/Adwaita/gtk-3.0/borders
 borders_DATA = 		\
 	column-header-border.svg \
+	column-header-border-dark.svg \
 	column-header-border-last.svg \
+	column-header-border-last-dark.svg \
 	button-border-focused.svg \
 	button-border-focused-dark.svg \
 	button-border.svg \
