Widget theme: initial window-unfocused work.

--- a/themes/Adwaita/gtk-3.0/borders/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/borders/Makefile.am
@@ -8,6 +8,7 @@ borders_DATA = 		\
 	generic-border-focused-dark.svg \
 	generic-border.svg \
 	generic-border-dark.svg \
+	generic-border-unfocused.svg \
 	primary-toolbar-button-border-focused.svg \
 	primary-toolbar-button-border-focused-dark.svg \
 	primary-toolbar-button-border.svg \
@@ -15,6 +16,7 @@ borders_DATA = 		\
 	primary-toolbar-generic-border-focused.svg \
 	primary-toolbar-generic-border-focused-dark.svg \
 	primary-toolbar-generic-border.svg \
-	primary-toolbar-generic-border-dark.svg
+	primary-toolbar-generic-border-dark.svg \
+	primary-toolbar-generic-border-unfocused.svg
 
 EXTRA_DIST = $(borders_DATA)
