Better error message for missing dependencies
Let pkg-config give the default error message, it will tell you
whether GTK+ or librsvg (or both) are missing. Right now we just say
GTK+ is not present, even if it's librsvg the one missing.

Also use DEPENDENCIES for the variable instead of GTK, since there's
more dependencies than GTK+.

https://bugzilla.gnome.org/show_bug.cgi?id=665909

--- a/configure.ac
+++ b/configure.ac
@@ -30,11 +30,10 @@ AM_GLIB_GNU_GETTEXT
 
 GTK_VERSION_REQUIRED=3.3.3
 
-PKG_CHECK_MODULES(GTK, gtk+-3.0 >= $GTK_VERSION_REQUIRED librsvg-2.0,,
-                  AC_MSG_ERROR([GTK+ $GTK_VERSION_REQUIRED is required to compile gnome-themes-standard]))
+PKG_CHECK_MODULES([DEPENDENCIES], [gtk+-3.0 >= $GTK_VERSION_REQUIRED librsvg-2.0])
 
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GTK_LIBS)
+AC_SUBST(DEPENDENCIES_CFLAGS)
+AC_SUBST(DEPENDENCIES_LIBS)
 
 GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-3.0`
 AC_SUBST(GTK_VERSION)
