Use the new resource file support in Gtk+

--- a/themes/Adwaita/gtk-3.0/Makefile.am
+++ b/themes/Adwaita/gtk-3.0/Makefile.am
@@ -2,9 +2,21 @@ SUBDIRS = assets borders
 
 themedir = $(datadir)/themes/Adwaita/gtk-3.0
 theme_DATA = 		\
-	gnome-applications.css \
+	gtk.gresource	\
 	gtk.css 	\
 	gtk-dark.css	\
+	settings.ini
+
+gtk.gresource: gtk.gresource.xml  $(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies $(srcdir)/gtk.gresource.xml)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(srcdir)  $<
+
+EXTRA_DIST = \
+	gnome-applications.css \
+	gtk.gresource.xml \
+	gtk.css \
+	gtk-dark.css \
+	gtk-main.css \
+	gtk-main-dark.css \
 	gtk-widgets.css \
 	gtk-widgets-backgrounds.css \
 	gtk-widgets-borders.css \
@@ -13,7 +25,5 @@ theme_DATA = 		\
 	gtk-widgets-assets.css \
 	gtk-widgets-assets-dark.css \
 	settings.ini
-
-EXTRA_DIST = $(theme_DATA)
 
 -include $(top_srcdir)/git.mk
