--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,9 @@ AC_SUBST(DEPENDENCIES_LIBS)
 GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-3.0`
 AC_SUBST(GTK_VERSION)
 
+GLIB_COMPILE_RESOURCES=`$PKG_CONFIG --variable glib_compile_resources gio-2.0`
+AC_SUBST(GLIB_COMPILE_RESOURCES)
+
 # Configure option to force placeholders
 AC_ARG_ENABLE([placeholders],
               AC_HELP_STRING([--enable-placeholders],
