HighContrast: make the theme a GResource
And split colors from the style definitions, so that we can make a
HighContrastInverse easily now.

--- a/themes/HighContrast/gtk-3.0/Makefile.am
+++ b/themes/HighContrast/gtk-3.0/Makefile.am
@@ -1,7 +1,13 @@
+gtk.gresource: gtk.gresource.xml  $(shell $(GLIB_COMPILE_RESOURCES) --generate-dependencies $(srcdir)/gtk.gresource.xml)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(srcdir)  $<
+
 themedir = $(datadir)/themes/HighContrast/gtk-3.0
 theme_DATA = \
-	gtk.css
+	gtk.css \
+	gtk.gresource
 
-EXTRA_DIST = $(theme_DATA)
+EXTRA_DIST = \
+	gtk.css \
+	gtk.gresource.xml
 
 -include $(top_srcdir)/git.mk
