HighContrast: add infrastructure to create the icon theme from symbolic
Add infrastructure so that we can create automatically a high contrast
icon theme from gnome-icon-theme-symbolic.
The icon is recolored and then the stroke necessary for high contrast is
applied; a create-highcontrast utility is introduced, which generates
both the PNG icon files in all sizes and the Makefile.

--- a/themes/HighContrast/Makefile.am
+++ b/themes/HighContrast/Makefile.am
@@ -3,13 +3,20 @@ SUBDIRS = gtk-3.0 gtk-2.0 icons
 THEME_NAME=HighContrast
 THEME_IN_FILES=index.theme.in
 
+include Makefile-icons.am
+
 %.theme:   %.theme.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*.po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
 
 themedir = $(datadir)/themes/$(THEME_NAME)
 
 theme_DATA = index.theme
 
+noinst_PROGRAMS = create-highcontrast
+create_highcontrast_SOURCES = create-highcontrast.c
+create_highcontrast_CFLAGS = $(HIGHCONTRAST_CFLAGS)
+create_highcontrast_LDADD = $(HIGHCONTRAST_LIBS) -lm
+
 DISTCLEANFILES = index.theme
-EXTRA_DIST = index.theme.in index.theme
+EXTRA_DIST += index.theme.in index.theme
 
 -include $(top_srcdir)/git.mk
